--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template</title>
+
+    <!-- this is for changing favicon symbol at broweser instead of globe customized -->
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=css-tricks.com">
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
+    <h1>hello wolrd
+        
+    </h1>
     <i class="fab fa-500px"></i>
     <!-- Script -->
     <script src="script.js"></script>
